Improve organisations authors form field structure.

--- a/src/app/scss/_layout.scss
+++ b/src/app/scss/_layout.scss
@@ -44,7 +44,6 @@ h5 {
 }
 
 .header-wrapper {
-  //padding: $padding-large-vertical 0;
   padding-top: $padding-large-vertical;
 }
 
@@ -54,7 +53,7 @@ h5 {
 }
 
 .view-wrapper {
-  padding-top: $padding-large-vertical;
+  padding-top: 5px;
   padding-bottom: 100px
 }
 
