--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -242,9 +242,10 @@
           </div>
         </div>
         <div data-ng-repeat="i in justus.organisaatiotekija track by $index"
-             class="row"
+             class="row ml-0 mr-0"
+             data-ng-class=" {'organisaatiotekija-border': justus.organisaatiotekija.length > 1  && !$first}"
              data-ng-model="req_organisaatiotekija[$index]">
-          <div class="col-xs-10">
+          <div class="col-xs-11 pl-0">
             <div class="row form-group" id="organisaatiotekijaRow">
               <div class="col-xs-12 col-sm-6"  data-ng-class="['sukunimiGroup' + $index]"
                    validate-organisaatiotekijat-directive validate="validateState"
@@ -279,7 +280,7 @@
             </div>
 
             <div class="row form-group">
-              <div data-ng-if="isFieldVisible('alayksikko')" data-ng-class="['orcidGroup' + $index]" class="col-xs-12 col-sm-6 form-group"
+              <div data-ng-if="isFieldVisible('alayksikko')" data-ng-class="['orcidGroup' + $index]" class="col-xs-12 col-sm-6"
                    validate-organisaatiotekijat-directive validate="validateState" field="orcid"
                    value="justus.organisaatiotekija[$index].orcid">
                 <label for="orcid"
@@ -293,7 +294,7 @@
                 <span class="invalid-pattern text-secondary text-danger" aria-hidden="true">Tarkasta ORCID -numeron muoto</span>
               </div>
               <!-- Kenttä hr numero, currently visible only for Luonnonvarakeskus -->
-              <div data-ng-if="isFieldVisible('hrnumero')" id="hrGroup" class="col-xs-12 col-sm-6 form-group">
+              <div data-ng-if="isFieldVisible('hrnumero')" id="hrGroup" class="col-xs-12 col-sm-6">
                 <label for="hrnumero" class="control-label">{{i18n.content.form.organisaatiotekija.hrnumero.picktip[lang]}}</label>
                 <input id="hrnumero"
                        name="hrnumero"
@@ -302,7 +303,7 @@
                        placeholder="{{i18n.content.form.organisaatiotekija.hrnumero.picktip[lang]}}">
               </div>
               <!-- Kenttä: Tekijän rooli taidejulkaisuille -->
-              <div data-ng-if="isFieldVisible('tekijanrooli')" id="rooliGroup" class="col-xs-12 col-sm-6 form-group">
+              <div data-ng-if="isFieldVisible('tekijanrooli')" id="rooliGroup" class="col-xs-12 col-sm-6 " data-ng-class="{ 'm-t': isFieldVisible('hrnumero') }">
                 <label id="organisaatiotekijarooli">{{i18n.content.form.organisaatiotekija.tekijanrooli.picktip[lang]}}</label>
                 <ui-select data-ng-model="rooli.selected"
                            on-select="useOrganisaatiotekijaRooli($index,$select.selected)"
@@ -332,12 +333,10 @@
                       <div class="col-xs-10 col-sm-10" data-ng-hide="!ota"
                            validate-organisaatiotekijat-directive validate="validateState" index="$parent.$index"
                            field="alayksikko" value="ota">
-                        <input id="unitlist"
-                               type="text"
-                               class="form-control mb-x"
-                               data-ng-disabled="true"
-                               value=" {{ ota }}  {{ getSelite(user.alayksikot, ota) }}"
-                               placeholder="{{ i18n.content.form.organisaatiotekija.alayksikko.picktip[lang] }}">
+
+                        <div class="form-group">
+                          <span id="unitlist" class="text-secondary font-weight-bold text-xl" data-ng-bind="ota + ' '+ getSelite(user.alayksikot, ota) "></span>
+                        </div>
                       </div>
                       <div class="col-xs-2 col-sm-2 mt-x">
                         <a
@@ -407,16 +406,16 @@
             </button>
           </div>
 
-          <div class="col-xs-2">
-            <button type="button"
-                    class="btn btn-danger"
+          <div class="col-xs-1 pl-0 pr-0">
+            <a
                     data-ng-click="justus.organisaatiotekija.splice($index, 1)"
                     data-ng-hide="justus.organisaatiotekija.length<2"
-                    title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}"
-                    data-ng-bind="i18n.content.form.organisaatiotekija.poista.tooltip[lang]">
-            </button>
+                    class="text-danger cursor-pointer text-secondary pull-right"
+                    title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}">
+              {{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}
+              <i class="fa fa-close"></i>
+            </a>
           </div>
-
         </div>
       </div>
     </div>
@@ -462,15 +461,15 @@
                       data-ng-bind="i18n.content.form.organisaatiotekija.lisaa.tooltip[lang]">
               </button>
             </div>
-            <div>
-              <button
-                      type="button"
-                      class="btn btn-primary"
+            <div class="pull-left m-t pl-x">
+              <a
                       data-ng-click="justus.julkaisu.projektinumero.splice(justus.julkaisu.projektinumero.length-1, 1)"
                       data-ng-hide="justus.julkaisu.projektinumero.length<2 || $index === '0'"
-                      title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}"
-                      data-ng-bind="i18n.content.form.organisaatiotekija.poista.tooltip[lang]">
-              </button>
+                      class="text-danger cursor-pointer text-secondary pull-right"
+                      title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}">
+                {{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}
+                <i class="fa fa-close"></i>
+              </a>
             </div>
           </div>
         </div>
