--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -57,6 +57,14 @@
   margin-bottom: 0;
 }
 
+.ml-0 {
+  margin-left: 0;
+}
+
+.mr-0 {
+  margin-right: 0;
+}
+
 .mb-x {
   margin-bottom: $padding-small-vertical;
 }
@@ -91,6 +99,10 @@
 
 .pl-0 {
   padding-left: 0;
+}
+
+.pr-0 {
+  padding-right: 0;
 }
 
 .pl-x {
