--- a/src/app/scss/components/_button.scss
+++ b/src/app/scss/components/_button.scss
@@ -164,4 +164,13 @@
   }
 }
 
+.poista-btn {
+  background: #a62639;
+  padding: 7px 12px;
+  color: #fff;
+  &:hover {
+    color: #fff;
+  }
+}
+
 
