--- a/src/app/scss/components/_form.scss
+++ b/src/app/scss/components/_form.scss
@@ -41,8 +41,8 @@
 }
 
 .organisaatiotekija-border {
-  padding-top: 15px;
-  border-top: 1px solid;
+  //padding-top: 15px;
+  border-bottom: 1px solid;
 }
 
 .invalid-pattern {
