Show hr data for admins.

--- a/src/app/html/valitse.html
+++ b/src/app/html/valitse.html
@@ -50,7 +50,7 @@
                 data-ng-bind="i18n.content.valitse.hyvaksy.text[lang]">
             </p>
         </div>
-        <div class="col-xs-12 col-sm-6 text-center" data-ng-if="user.role === 'owner'">
+        <div class="col-xs-12 col-sm-6 text-center">
             <div class="m-b">
                 <i class="fa fa-user fa-4x text-dark" aria-hidden="true"></i>
             </div>
