Fix bug in organisational unit array.

--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -68,11 +68,10 @@
             <span data-ng-bind="getSelite(codes.julkaisuntekijanrooli ,justus.organisaatiotekija[$index].rooli)"></span>
           </div>
             <div data-ng-if="justus.organisaatiotekija.length > 0 && justus.organisaatiotekija[0].alayksikko.length > 0">
-              <span data-ng-repeat="a in justus.organisaatiotekija[$index].alayksikko track by $index">
+              <p class="text-sm mb-0" data-ng-repeat="a in justus.organisaatiotekija[$index].alayksikko track by $index">
                 {{ a }}
                 <span data-ng-if="a"> ({{ getSelite(user.alayksikot ,a) }})</span>
-                <span data-ng-if="!$last">, </span>
-              </span>
+              </p>
             </div>
           </div>
         </td>
