Fix texts and add margin to add new person panel.

--- a/src/app/html/admin/vie.html
+++ b/src/app/html/admin/vie.html
@@ -126,7 +126,7 @@
 
 
     <uib-accordion class="text-secondary">
-        <div uib-accordion-group class="panel-default"
+        <div uib-accordion-group class="panel-default m-t"
              is-open="status.open"
              data-ng-class="{'opened': status.open}">
             <uib-accordion-heading class="bg-light" >
