--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -232,6 +232,10 @@
   list-style: none;
 }
 
+.break-word {
+  overflow-wrap: break-word;
+}
+
 .no-underline {
   &:hover {
     text-decoration: none;
@@ -241,12 +245,6 @@
 
 *:focus {
   outline: none !important;
-}
-
-.issn-list {
-  &:first-child {
-
-  }
 }
 
 .no-hover {
